[package]
name = "ark-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../types" }
ark-core = { path = "../core" }
ark-config = { path = "../config" }
# T-5.7: hook_dispatcher migration. Supervisor now compiles legacy
# `[[hooks]]` config into a synthetic ReactionRegistry via
# `ark_scene::hook_compat`, builds the IntentRegistry + IntentContext
# the reaction_dispatcher consumes, and spawns reaction_dispatcher in
# place of the old hook_dispatcher.
ark-scene = { path = "../scene" }
ark-engines-claude-code = { path = "../engines/claude-code" }
ark-orchestrators-cavekit = { path = "../orchestrators/cavekit" }
ark-orchestrators-claude-code = { path = "../orchestrators/claude-code" }
ark-mux-zellij = { path = "../mux/zellij" }
# T-ACP.5: permission dispatcher routes user decisions through the
# ACP client's `permit` method.
acp-client = { path = "../acp-client" }
async-trait = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fd-lock = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
interprocess = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
futures = { workspace = true }
# T-6.2: Intent dispatch via control socket. The supervisor builds a
# synthesized `KdlNode` from the JSON args sent by `ark-hook intent`,
# then dispatches through `ark_scene::intent::IntentRegistry`. The
# upstream `kdl` crate lives in `[workspace.dependencies]` already
# (used by scene); we pull it here so the synthesis lives next to
# its only consumer.
kdl = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ark-mux-zellij = { path = "../mux/zellij", features = ["test-support"] }
# T-ACP.4b: build `MergedUse` / `ResolvedUse` fixtures in the
# engine_resolution tests. Tests only — the production resolver
# consumes `ark-scene`'s re-export.
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }

# Tiny helper binary exercised by the lock + daemon tests. It's a dev-
# only fixture — kept inside the crate (rather than in tests/) so the
# test code can reference its path via `cargo_bin`-style discovery via
# `CARGO_BIN_EXE_<name>`.
[[bin]]
name = "ark-supervisor-testhelper"
path = "src/bin/testhelper.rs"
required-features = []
# The helper is only useful during `cargo test` — we mark it as such by
# only building when the test profile is active. Cargo doesn't have a
# direct `dev-only` bin flag, so we gate via #[cfg] in the source file
# and let the binary compile in all profiles (cheap, small).
