[package]
name = "ark-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../types" }
ark-core = { path = "../core" }
ark-config = { path = "../config" }
# T-030 (cavekit-soul-phase-2-host-dispatch R8): extension load sequence
# consumes pre-parsed `ExtensionMetadata` values. Types-only crate, no
# I/O or KDL parsing pulled in.
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
# T-036 (cavekit-soul-phase-2-host-dispatch R9): session-scoped
# user-close suppression storage consumes `ParamsHash`,
# `SceneHandleName`, and `SuppressionPolicy` from ark-view.
ark-view = { path = "../ark-view" }
# T-5.7: hook_dispatcher migration. Supervisor now compiles legacy
# `[[hooks]]` config into a synthetic ReactionRegistry via
# `ark_scene::hook_compat`, builds the IntentRegistry + IntentContext
# the reaction_dispatcher consumes, and spawns reaction_dispatcher in
# place of the old hook_dispatcher.
ark-scene = { path = "../scene", package = "ark-scene" }
ark-mux-zellij = { path = "../mux/zellij" }
async-trait = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fd-lock = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
interprocess = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
futures = { workspace = true }
# T-6.2: Intent dispatch via control socket. The supervisor builds a
# synthesized `KdlNode` from the JSON args sent by intent dispatchers
# (historically `ark-hook intent`; ark-bus plugin currently; latent bug
# v0.2 — see context/plans/v0.2-backlog.md),
# then dispatches through `ark_scene::intent::IntentRegistry`. The
# upstream `kdl` crate lives in `[workspace.dependencies]` already
# (used by scene); we pull it here so the synthesis lives next to
# its only consumer.
kdl = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
ark-mux-zellij = { path = "../mux/zellij", features = ["test-support"] }
# T-040 (cavekit-soul-phase-2-tests R4): capability-gate matrix exercises
# `ext_dispatch::should_dispatch` + `warn_advertised_but_unimplemented`
# using the R1 `StubExtension` fixture. Test-only; never linked into
# production supervisor binaries.
ark-ext-test-support = { path = "../ark-ext-test-support" }
ark-ext-proto = { path = "../ark-ext-proto" }
ark-view = { path = "../ark-view" }
# T-042 (tests R6): scene's `ExtensionRegistry` owns the manifest→intent
# symbol table we assert on; registry-only, no scene compiler. (Main
# `ark-scene` path dep stays above; `ark-ext-metadata-types` is already
# a main dep via line 17 — we re-list it here only for test clarity.)
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
futures = { workspace = true }

# Tiny helper binary exercised by the lock + daemon tests. It's a dev-
# only fixture — kept inside the crate (rather than in tests/) so the
# test code can reference its path via `cargo_bin`-style discovery via
# `CARGO_BIN_EXE_<name>`.
[[bin]]
name = "ark-supervisor-testhelper"
path = "src/bin/testhelper.rs"
required-features = []
# The helper is only useful during `cargo test` — we mark it as such by
# only building when the test profile is active. Cargo doesn't have a
# direct `dev-only` bin flag, so we gate via #[cfg] in the source file
# and let the binary compile in all profiles (cheap, small).
