[package]
name = "ark-test-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "mock-claude"
path = "src/bin/mock-claude.rs"
