[package]
name = "ark-ext-claude-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

# T-001..T-003 (claude-code-ext R1 scaffolding): single-crate Claude Code
# extension. Ships as a workspace member at `extensions/claude-code/`
# (distinct from core `crates/*`) per the 2026-04-18 pivot.
#
# Contents (populated incrementally by T-004..T-045+):
#   * `src/lib.rs` — `ClaudeCodeExtension` struct + `ArkExtension` impl.
#   * `bin/cc-hook/main.rs` — subprocess binary invoked from
#     `~/.claude/settings.json` hooks; POSTs NDJSON events to ark's
#     per-session socket. See kit R1 / R2.
#
# Dep budget (R1):
#   * `ark-types` — shared `SessionSpec` / `ExitReason` / event types.
#   * `ark-ext-proto` — `ArkExtension` trait surface.
#   * `ark-view` — typed `Handle` surface for `view.pane.v1`.
#   * `ark-scene` — scene-compile-hook entry point for `use "claude-code"`.
#   * `notify` — fs watcher for transcript-tail (T-007).
#   * `tokio` — async runtime for hook socket + transcript tail.
#   * `serde` / `serde_json` — NDJSON hook payload ser/de.
#   * `tracing` — structured logs.
#   * `async-trait` — required so `impl ArkExtension` can use
#     `#[async_trait]` (the upstream trait is `#[async_trait]`-based;
#     see `crates/ark-ext-proto/src/lib.rs`).

[dependencies]
ark-types = { path = "../../crates/types" }
ark-ext-proto = { path = "../../crates/ark-ext-proto" }
ark-view = { path = "../../crates/ark-view" }
ark-scene = { path = "../../crates/scene" }
# T-029 / T-034 (claude-code-ext R5 + R6): view structs are authored via
# `#[derive(View, CommandView)]` from ark-ext-derive. `inventory::submit!`
# blocks the derive expands into pull in an inventory dep transitively,
# but the proc-macro crate itself is the only direct edge we need here.
ark-ext-derive = { path = "../../crates/ark-ext-derive" }
# T-029 view-registration records submitted by `#[derive(View)]` are typed
# as `inventory::collect!`-ed `ViewRegistration`s; the struct definition
# lives in ark-ext-metadata-types. Already pulled in transitively via
# ark-scene but named explicitly so the dep is discoverable.
ark-ext-metadata-types = { path = "../../crates/ark-ext-metadata-types" }
# T-029 derive uses `::inventory::submit!`; make the crate name resolvable
# at macro-expansion time in this ext's own source.
inventory = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# T-006 cc-hook salvage: the binary needs clap for CLI parsing, chrono
# for the RFC 3339 `emitted_at` stamp on every NDJSON line (R2),
# anyhow for error plumbing through the socket-connect path, and
# tracing-subscriber so the binary can route its own warn-logs to
# stderr (R2 fail-open: socket absent → stderr log + exit 0).
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
# T-011 socket reader: typed error enum for `CcHookSocket::bind` uses
# `#[derive(thiserror::Error)]` so callers (on_session_start) can
# pattern-match on bind-vs-runtime failure classes.
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# T-031 (claude-code-ext R5 handle-type validation): trybuild goldens
# assert `validate_scene!`-based compile errors when a scene wires the
# `claude-code` view's `subagents` attribute to a handle that is not a
# `Stack<ClaudeCodeSubagent>`. Dev-only — never ships in the rlib.
trybuild = "1"
# T-031 re-uses the `validate_scene!` proc-macro (re-exported by
# ark-scene) for KDL-level handle-kind validation. Already a dep via the
# top-level `ark-scene = { path = ... }` line; named here again under
# [dev-dependencies] is NOT needed because cargo treats the production
# dep as in-scope for tests too.
# T-016 envelope test: the test harness evaluates `event.payload.*`
# expressions against a minimal `rhai::Engine` to prove the translator's
# payload shape is readable from scene reactions. A real scene-runtime
# dispatch is too heavy for a unit test (would pull in ark-scene's KDL
# compile pipeline); raw Rhai is sufficient because the scene engine
# uses the same `Engine::parse_json` → `Dynamic` map conversion under
# the hood for event payloads.
rhai = { workspace = true }

# T-003 (claude-code-ext R1): `cc-hook` binary target. Stubbed now;
# T-006 populates the main with payload-forwarding logic.
[[bin]]
name = "cc-hook"
path = "bin/cc-hook/main.rs"
