[package]
name = "ark-mux-zellij"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../../types" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
minijinja = { workspace = true }
portable-pty = "0.8"
serde = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
# Exposes `ZellijMux::for_test(...)` to downstream crates' dev-dependencies so
# tests can script a stub executor without redeclaring their own mock mux.
# Default-off so the test-only surface never leaks into production builds.
test-support = []
