[package]
name = "ark-orchestrators-cavekit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../../types" }
ark-core = { path = "../../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
ark-test-fixtures = { path = "../../test-fixtures" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
