[package]
name = "ark-orchestrators-cavekit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../../types" }
ark-core = { path = "../../core" }
ark-mux-zellij = { path = "../../mux/zellij" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
ark-test-fixtures = { path = "../../test-fixtures" }
ark-mux-zellij = { path = "../../mux/zellij", features = ["test-support"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
