[package]
name = "ark-orchestrators-cavekit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Soul phase 1 T-020: the pre-soul watcher impls (impl-tracking,
# ralph-loop, codex-findings, git-diff, review-tab) are gated behind
# this default-off feature while the new extension event surface is
# in flight. Re-enabling them requires reviving the legacy AgentEvent
# pattern matches inside watchers/.
_legacy_watchers = ["dep:notify", "dep:ark-test-fixtures"]

[dependencies]
ark-types = { path = "../../types" }
ark-core = { path = "../../core" }
ark-mux-zellij = { path = "../../mux/zellij", features = ["test-support"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true, optional = true }
ark-test-fixtures = { path = "../../test-fixtures", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
