[package]
name = "ark-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# zellij-tile 0.44 matches the zellij 0.44.x runtime targeted by
# cavekit-mux-zellij, mirroring the pin used by `ark-plugin-status` and
# `ark-plugin-picker`. Kept local (not in [workspace.dependencies]) because
# only the three plugin crates consume it.
#
# T-131 default-features audit (cavekit-distribution.md R3):
#   - zellij-tile 0.44: `default = []` — nothing to strip.
#
# T-6.1: skeleton-only. Intent dispatch (T-6.2) and event forwarding
# (T-6.3) will add further deps (serde/serde_json for control-socket
# messages) when those tasks land — deliberately absent here so the
# skeleton's wasm artifact is the minimum viable plugin.
zellij-tile = "0.44"
