[package]
name = "ark-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# zellij-tile 0.44 matches the zellij 0.44.x runtime targeted by
# cavekit-mux-zellij, mirroring the pin used by `ark-plugin-status` and
# `ark-plugin-picker`. Kept local (not in [workspace.dependencies]) because
# only the three plugin crates consume it.
#
# T-131 default-features audit (cavekit-distribution.md R3):
#   - zellij-tile 0.44: `default = []` — nothing to strip.
#
# T-6.2 / T-6.3: scene-bridge endpoints (`ark-intent`, `ark-rebind`,
# pane-lifecycle event forwarding). The plugin parses incoming pipe
# payloads as JSON to extract intent name + args before re-rendering as
# a `--json` arg to `ark-hook`. `serde_json::Value` is the simplest
# tolerant parser surface; the heavy validation lives in the supervisor's
# `Intent`/`Emit` handlers per cavekit-scene.md R5/R6.
#
# T-131 default-features audit (cavekit-distribution.md R3):
#   - serde_json: `default = ["std"]` — std is required (the wasm32-wasip1
#     target supports std). Total wasm impact ~30 KB after wasm-opt.
zellij-tile = "0.44"
serde = { workspace = true }
serde_json = { workspace = true }
